--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ a {
   }
 
   .main {
-    margin-top: 100px !important;
+    margin-top: 90px !important;
     margin-left: 0px !important;
     width: 100%;
     overflow-x: hidden;
@@ -155,7 +155,7 @@ a {
     display: block;
     width: 24px;
     margin-right: 35px;
-    top: 10px;
+    top: 17px;
   }
   
   .sidenav .logo {
@@ -191,7 +191,7 @@ a {
   .sidenav.responsive a.hamburger {
     position: absolute;
     right: 0;
-    top: 30px;
+    top: 37px;
   }
   .sidenav.responsive .logo{
     cursor: pointer;
